# Video-Recommendation-System-ML

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
configs/: processing_config.yaml
deployment/: README.md
deployment/cdk/: cdk.json  package-lock.json  package.json  tsconfig.json
deployment/cdk/lib/config/: environment.ts
deployment/cdk/lib/constructs/: api.ts  compute.ts  data-collection.ts  feature-store.ts  index.ts  ml-pipeline.ts  monitoring.ts  networking.ts  secrets.ts  storage.ts
deployment/cdk/lib/stacks/: index.ts  video-recommendation-stack.ts
deployment/docker/: Dockerfile.lambda  requirements-lambda.txt
docs/: ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md
scripts/: bootstrap_data.py  deploy.sh  run_processing.py  serve_recommendations.py  train_ranker.py  train_two_tower.py
src/: .gitkeep  __init__.py
src/config/: __init__.py  feature_config.py  settings.py
src/data/: __init__.py  data_loader.py  schemas.py  synthetic_generator.py
src/data_collection/: __init__.py  collection_config.py  feedback_loop.py  ground_truth_collector.py  inference_tracker.py  merge_job.py
src/dataset/: __init__.py  ranker_dataset.py  tf_dataset_builder.py  two_tower_dataset.py
src/feature_engineering/: __init__.py  interaction_features.py  ranker_features.py  user_features.py  video_features.py
src/lambdas/: __init__.py  deployment.py  evaluation.py  event_processing.py  feature_ingestion.py  merge_job.py  preprocessing.py  recommendations.py  training.py
src/ml_pipeline/: __init__.py  data_versioning.py  deployment_pipeline.py  ml_pipeline.py  model_registry.py  pipeline_config.py  preprocessing_job.py  training_orchestrator.py
src/models/: __init__.py  metrics.py  model_config.py  ranker.py  trainers.py  two_tower.py
src/monitoring/: __init__.py  ab_testing.py  data_capture.py  data_quality_monitor.py  monitoring_config.py  online_metrics.py  performance_monitor.py  ranker_sampler.py
src/pipeline/: __init__.py  pipeline_config.py  processing_pipeline.py
src/preprocessing/: __init__.py  artifacts.py  normalizers.py  tag_embedder.py  text_embedder.py  vocabulary_builder.py
src/serving/: __init__.py  candidate_retrieval.py  feature_store_client.py  filtering_service.py  lambda_handler.py  multi_query_generator.py  offline_pipeline.py  orchestrator.py  query_encoder.py  ranker_service_v2.py  ranking_service.py  recommendation_service.py  redis_cache_client.py  sagemaker_deployment.py  serving_config.py  vector_store.py
src/utils/: __init__.py  health.py  io_utils.py  logging_utils.py
tests/: test_application_serving.py  test_data_collection.py  test_dataset_generators.py  test_metrics.py  test_ml_pipeline.py  test_monitoring.py  test_normalizers.py  test_pipeline.py  test_ranker_model.py  test_serving.py  test_two_tower_model.py  test_vocabulary_builder.py
