# =============================================================================
# Video Recommendation System - Project Configuration
# =============================================================================

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-recommendation-system"
version = "1.0.0"
description = "Production-grade video recommendation system using Two-Tower and Ranker models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Video Rec Team"}
]
keywords = [
    "machine-learning",
    "recommendation-system",
    "two-tower",
    "catboost",
    "aws",
    "lambda",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "pyarrow>=12.0.0,<18.0.0",
    "pyyaml>=6.0",
    "boto3>=1.28.0",
    "redis>=4.5.0,<6.0.0",
]

[project.optional-dependencies]
ml = [
    "tensorflow>=2.13.0,<2.17.0",
    "tensorflow-hub>=0.14.0",
    "tensorflow-text>=2.13.0",
    "catboost>=1.2.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "bandit[toml]>=1.7.0",
    "types-redis",
    "types-PyYAML",
    "types-requests",
]
all = [
    "video-recommendation-system[ml,dev]",
]

[project.urls]
Homepage = "https://github.com/your-org/video-recommendation-system"
Documentation = "https://github.com/your-org/video-recommendation-system#readme"
Repository = "https://github.com/your-org/video-recommendation-system"
Issues = "https://github.com/your-org/video-recommendation-system/issues"

[project.scripts]
video-rec-serve = "src.serving.lambda_handler:main"
video-rec-bootstrap = "scripts.bootstrap_data:main"
video-rec-process = "scripts.run_processing:main"

# =============================================================================
# Tool Configuration
# =============================================================================

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "scripts*", "deployment*"]

[tool.setuptools.package-data]
"*" = ["py.typed", "*.yaml", "*.json"]

# -----------------------------------------------------------------------------
# Ruff - Linting and Formatting
# -----------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "build",
    "dist",
    "deployment/cdk",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "B905",   # zip without strict
    "ARG001", # unused function argument (common in callbacks)
    "ARG002", # unused method argument
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# -----------------------------------------------------------------------------
# MyPy - Type Checking
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "scripts/",
    "deployment/",
    "venv/",
    ".venv/",
]

[[tool.mypy.overrides]]
module = [
    "tensorflow.*",
    "catboost.*",
    "faiss.*",
    "redis.*",
    "boto3.*",
    "botocore.*",
]
ignore_missing_imports = true

# -----------------------------------------------------------------------------
# Pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "-ra",
    "--strict-markers",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "gpu: Tests requiring GPU",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# -----------------------------------------------------------------------------
# Coverage
# -----------------------------------------------------------------------------
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
fail_under = 70
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

# -----------------------------------------------------------------------------
# Bandit - Security
# -----------------------------------------------------------------------------
[tool.bandit]
exclude_dirs = ["tests", "scripts", "deployment"]
skips = ["B101", "B311"]  # Skip assert and random warnings

# -----------------------------------------------------------------------------
# Commitizen
# -----------------------------------------------------------------------------
[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
